--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1 class="title">大泉直人のウェブサイト</h1>
     <p>hello world</p>
+    <img src="profile.jpg" alt="プロフィール画像">
   </body>
 </html>
