--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">大泉直人のウェブサイト</h1>
+    <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
     <p>hello world</p>
     <img src="profile.jpg" alt="プロフィール画像">
   </body>
