--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>naotoizu</title>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-    <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
-    <p>hello world</p>
-    <img src="profile.jpg" alt="プロフィール画像">
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>naotoizu</title>
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+
+<body>
+  <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
+  <p>hello world</p>
+  <img src="tokyo staion.jpg" alt="プロフィール画像">
+</body>
+
 </html>
