--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
   <p>hello world</p>
-  <img src="tokyo staion.jpg" alt="プロフィール画像">
+  <img src="tokyo station.jpg" alt="プロフィール画像">
 </body>
 
 </html>
