--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
   <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
   <p>hello world</p>
   <img src="tokyo station.jpg" alt="プロフィール画像">
+  
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="" alt="直人">
+      </div>
+      <div class="header-right">
+        <a href="#" class="login">Hey</a>
+      </div>
+    </div>
+  </header>
+
 </body>
 
 </html>
