--- a/index.html
+++ b/index.html
@@ -2,26 +2,55 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>naotoizu</title>
-  <link rel="stylesheet" href="stylesheet.css">
+    <meta charset="utf-8">
+    <title>naotoizu</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-  <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
-  <p>hello world</p>
-  <img src="tokyo station.jpg" alt="プロフィール画像">
+    <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
+    <p>hello world</p>
+    <img src="tokyo station.jpg" alt="プロフィール画像">
   
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="" alt="直人">
-      </div>
-      <div class="header-right">
-        <a href="#" class="login">Hey</a>
-      </div>
+    <header class="header">
+        <span class="header__nav-trigger"></span>
+        <nav class="header__nav">
+          <ul class="header__nav__list">
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">Information</a>
+            </li>
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">hello</a>
+            </li>
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">konnnitiha</a>
+            </li>
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">tsukuba</a>
+            </li>
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">university</a>
+            </li>
+            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__title" href="https://naotoizu7010.github.io/naotoizu7010/">naotoizu</a>
+        <button class="header__button" type="button">
+          Menu
+        </button>
+      </header>
+    <header>
+        <div class="container">
+            <div class="header-left">
+            <img class="logo" src="" alt="直人">
+        </div>
+        <div class="header-right">
+            <a href="#" class="login">Hey</a>
+        </div>
     </div>
-  </header>
+    </header>
 
 </body>
 
