--- a/index.html
+++ b/index.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>naotoizu</title>
-    <link rel="stylesheet" href="stylesheet.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Simple Website</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+  }
+  header {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+  }
+  .container {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+  .content {
+    padding: 20px;
+  }
+  footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+  }
+</style>
 </head>
-
 <body>
-    <h1 class="title">naotoizuuuuuuのウェブサイト</h1>
-    <p>hello world</p>
-    <img src="tokyo station.jpg" alt="プロフィール画像">
-  
-    <header class="header">
-        <span class="header__nav-trigger"></span>
-        <nav class="header__nav">
-          <ul class="header__nav__list">
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">Information</a>
-            </li>
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">hello</a>
-            </li>
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">konnnitiha</a>
-            </li>
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">tsukuba</a>
-            </li>
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">university</a>
-            </li>
-            <li style="transition: opacity 500ms cubic-bezier(0.77, 0, 0.175, 1) 0s;">
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header__title" href="https://naotoizu7010.github.io/naotoizu7010/">naotoizu</a>
-        <button class="header__button" type="button">
-          Menu
-        </button>
-      </header>
-    <header>
-        <div class="container">
-            <div class="header-left">
-            <img class="logo" src="" alt="直人">
-        </div>
-        <div class="header-right">
-            <a href="#" class="login">Hey</a>
-        </div>
+  <header>
+    <h1>Welcome to My Website</h1>
+  </header>
+  <div class="container">
+    <div class="content">
+      <h2>About Me</h2>
+      <p>Hello! I'm a web enthusiast who loves coding.</p>
     </div>
-    </header>
-
+  </div>
+  <footer>
+    <p>&copy; 2023 My Simple Website</p>
+  </footer>
 </body>
-
 </html>
